@@ -1,5 +1,7 @@
 KeePassDroid (0.4)
   * Support adding groups
+KeePassDroid (0.3.4)
+  * Add context menus
 
 KeePassDroid (0.3.3)
   * Add new icon and UI enhancements from Francis Jacquerye
